--- a/public/css/floating-labels.css
+++ b/public/css/floating-labels.css
@@ -10,19 +10,24 @@ body {
 
 body {
   display: -ms-flexbox;
+  display: -webkit-box;
   display: flex;
   -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #a9a9a94d;
 }
 
 .form-signin {
   width: 100%;
   max-width: 420px;
   padding: 15px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .form-label-group {
@@ -44,7 +49,6 @@ body {
   margin-bottom: 0; /* Override default `<label>` margin */
   line-height: 1.5;
   color: #495057;
-  cursor: text; /* Match the input under the label */
   border: 1px solid transparent;
   border-radius: .25rem;
   transition: all .1s ease-in-out;
@@ -82,24 +86,11 @@ body {
   color: #777;
 }
 
-/* Fallback for Edge
--------------------------------------------------- */
-@supports (-ms-ime-align: auto) {
-  .form-label-group > label {
-    display: none;
-  }
-  .form-label-group input::-ms-input-placeholder {
-    color: #777;
-  }
+button.btn{
+  background-color: #FF4040;
+  color: white;
 }
 
-/* Fallback for IE
--------------------------------------------------- */
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .form-label-group > label {
-    display: none;
-  }
-  .form-label-group input:-ms-input-placeholder {
-    color: #777;
-  }
+.text-center h1{
+  font-family: 'Alex Brush';font-size: 55px;
 }
